--- a/styles.css
+++ b/styles.css
@@ -39,8 +39,8 @@ padding-right: 20px;
 background-color: lightcoral;
 }
 
-.funParagraph {
-    background-color: green;
+#testP {
+    color: green;
 }
 
 
